--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,26 @@
-version: "3.9"
-   
+# This defines two services: db and web.
+version: '3'
 services:
-  mysql:
-    image: mysql
+  db:
+    image: mysql:8
+    ports:
+      - "3306:3306"
     environment:
-      - MYSQL_DB=qlns
-      - MYSQL_USER=root
-      - MYSQL_PASSWORD=LLV6#s9ustmIp7xz
+      - MYSQL_DATABASE='qlns'
+      - MYSQL_USER='root'
+      - MYSQL_PASSWORD='LLV6#s9ustmIp7xz'
+      - MYSQL_ROOT_PASSWORD='LLV6#s9ustmIp7xz'
+      - MYSQL_HOST=''
+    volumes:
+      - /tmp/app/mysqld:/var/run/mysqld
+      - ./db:/var/lib/mysql
   web:
     build: .
     command: python manage.py runserver 0.0.0.0:8000
-    volumes:
-      - .:/code
     ports:
       - "8000:8000"
+    volumes:
+      - .:/app
+      - /tmp/app/mysqld:/run/mysqld
     depends_on:
-      - mysql
+      - db
