--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,12 +5,13 @@ services:
     image: mysql:latest
     ports:
       - "3306:3306"
+    command: mysqld --default-authentication-plugin=mysql_native_password --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
     environment:
-      - MYSQL_DATABASE='qlns'
-      - MYSQL_USER='root'
-      - MYSQL_PASSWORD='LLV6#s9ustmIp7xz'
-      - MYSQL_ROOT_PASSWORD='LLV6#s9ustmIp7xz'
-      - MYSQL_HOST='localhost'
+      - MYSQL_DATABASE=qlns
+      - MYSQL_USER=root
+      - MYSQL_PASSWORD=LLV6#s9ustmIp7xz
+      - MYSQL_ROOT_PASSWORD=LLV6#s9ustmIp7xz
+      - MYSQL_HOST=localhost
   #  volumes:
   #    - /tmp/app/mysqld:/var/run/mysqld
   #    - ./db:/var/lib/mysql
