--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,19 +2,19 @@
 version: '3'
 services:
   db:
-    image: mysql:latest
+    image: mysql:5.7
     ports:
-      - "3306:3306"
-    command: mysqld --default-authentication-plugin=mysql_native_password --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
+      - '3306:3306'
+  #  command: mysqld --default-authentication-plugin=mysql_native_password --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
+    restart: always
     environment:
       - MYSQL_DATABASE=qlns
       - MYSQL_USER=root
-      - MYSQL_PASSWORD=LLV6#s9ustmIp7xz
-      - MYSQL_ROOT_PASSWORD=LLV6#s9ustmIp7xz
-      - MYSQL_HOST=localhost
-  #  volumes:
-  #    - /tmp/app/mysqld:/var/run/mysqld
-  #    - ./db:/var/lib/mysql
+      - MYSQL_PASSWORD=s9ustmIp7xz
+      - MYSQL_ROOT_PASSWORD=s9ustmIp7xz
+#      - MYSQL_HOST=127.0.0.1
+    volumes:
+      - ./db_data:/var/lib/mysql
   web:
     build: .
     command: python manage.py runserver 0.0.0.0:8000
@@ -22,6 +22,7 @@ services:
       - "8000:8000"
     volumes:
       - .:/app
-  #    - /tmp/app/mysqld:/run/mysqld
     depends_on:
+      - db
+    links:
       - db
